# events-api-architecture

./: LICENSE  README.md
provider-api-python/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
provider-api-python/src/provider_api/: config.py  main.py
